<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/title"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="200dip"
        android:layout_height="50dip"
        android:layout_marginTop="50dip"
        android:hint="@string/username" />
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginLeft="20dip"
        android:layout_marginTop="10dip"
        >

    <EditText
        android:id="@+id/password"
        android:layout_width="200dip"
        android:layout_height="50dip"
        android:inputType="textPassword"
        android:hint="@string/password" />
    <CheckBox 
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/loginBt"
            android:layout_width="110dip"
            android:layout_height="50dip"
            android:textSize="18sp"
            android:text="@string/login" />

        <Button
            android:id="@+id/exitBt"
            android:layout_width="110dip"
            android:layout_height="50dip"
            android:textSize="18sp"
            android:text="@string/exit" />
    </LinearLayout>

</LinearLayout>