<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:orientation="horizontal" 
        >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/list_name"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
             />

        <TextView
            android:layout_width="40dip"
            android:layout_height="wrap_content"
            android:text="@string/list_state" 
            android:textSize="18sp"
            android:layout_marginRight="10dip"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:background="@android:color/darker_gray"
        android:cacheColorHint="@android:color/darker_gray"
        android:layout_width="fill_parent"
        android:layout_height="0dip" 
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:baselineAligned="false"
        android:orientation="horizontal" >
		
         <Button
            android:id="@+id/synchroBt"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_marginBottom="-8dip"
            android:layout_marginLeft="-8dip"
            android:text="@string/synchronize" />
        
        <Button
            android:id="@+id/allselectBt"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_marginBottom="-8dip"
            android:layout_marginLeft="-8dip"
            android:text="@string/allselect" />            
        
        <Button
            android:id="@+id/defineBt"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_marginBottom="-8dip"
            android:layout_marginLeft="-8dip"
            android:text="@string/define" />

        <Button
            android:id="@+id/cancelBt"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_marginBottom="-8dip"
            android:layout_marginLeft="-8dip"
            android:layout_marginRight="-8dip"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>