<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

         <com.baidu.mapapi.MapView
            android:id="@+id/historyMapView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true" 
        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_tracker"
                android:textColor="#00008b" />

            <TextView
                android:id="@+id/infoTracker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:textColor="#228b22" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:text="@string/set_date"
                android:textColor="#00008b" />

            <TextView
                android:id="@+id/infoDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:textColor="#228b22" />
        </LinearLayout>
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="5dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/setBt"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="-8dip"
            android:layout_marginLeft="-8dip"
            android:layout_weight="1"
            android:contentDescription="@string/set"
            android:src="@drawable/set" />

        <ImageButton
            android:id="@+id/playBt"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="-8dip"
            android:layout_marginLeft="-8dip"
            android:layout_weight="1"
            android:contentDescription="@string/play"
            android:src="@drawable/play" />

        <ImageButton
            android:id="@+id/pauseBt"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="-8dip"
            android:layout_marginLeft="-8dip"
            android:layout_weight="1"
            android:contentDescription="@string/pause"
            android:src="@drawable/pause" />

        <ImageButton
            android:id="@+id/stopBt"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="-8dip"
            android:layout_marginLeft="-8dip"
            android:layout_weight="1"
            android:contentDescription="@string/stop"
            android:src="@drawable/stop" />

        <ImageButton
            android:id="@+id/backBt"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="-8dip"
            android:layout_marginLeft="-8dip"
            android:layout_marginRight="-8dip"
            android:layout_weight="1"
            android:contentDescription="@string/back"
            android:src="@drawable/back" />
    </LinearLayout>

</LinearLayout>