<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/history_set"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="60dip"
            android:layout_height="fill_parent"
            android:gravity="right"
            android:text="@string/set_tracker"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/trackerSp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="-10dip"
            android:layout_marginLeft="5dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="60dip"
            android:layout_height="fill_parent"
            android:gravity="right"
            android:text="@string/set_date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="4dip"
            android:layout_marginLeft="7dip"
            android:layout_marginRight="4dip"
            android:layout_marginTop="4dip"
            android:background="@drawable/textview_style"
            android:gravity="left"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="60dip"
            android:layout_height="fill_parent"
            android:gravity="right"
            android:text="@string/set_speed"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/speedSp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="-10dip"
            android:layout_marginLeft="5dip" />
    </LinearLayout>

</LinearLayout>